<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qcar2_nodes</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="joseph.shu@quanser.com">Joseph Shu</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>

  <depend>qcar2_interfaces</depend>

  <!-- ✅ Add for TF broadcaster -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
